tests/NormalTests/paczka1/small_fuzzy/53252542.err
Error in line 4: SMaUyYdJYR A384 65,9
Error in line 5: zul A975 10,7
Error in line 2: yCqI3x3 A384 91,9
Error in line 15: YeRDGTLs A503 7,7
